syntax = "proto3";
//proto specifying service

option java_package = "ds.smartwarehouse.project.orderManagment"; //this option DOES change
option java_multiple_files = true; //DOES NOT change
option java_outer_classname = "NewOrderManagementImpl";

service OrderManagement {

	//unary
	rpc stockCheck(StockRequest) returns (StockResponse) {};

	//server-to-client streaming
	rpc replenishStock(StockReplenishRequest) returns(stream StockReplenishResponse) {};

	//client-to-server streaming
	rpc orderTracking (stream OrderTrackingRequest) returns (OrderTrackingResponse){};


}

message StockRequest {
	string stockMessage = 1;
}

message StockResponse {
	int32 stockNumber = 1;
	string stockType = 2;
}

message StockReplenishRequest {
	string replenishMessage = 1;
}

message StockReplenishResponse {
	string replenishType = 1;
	int32 lowStock = 2;
	int32 highStock = 3;
	string stockReplenished = 4;
}

message OrderTrackingRequest {
	int32 orderNumber = 1;
}

message OrderTrackingResponse {
	int32 orderNumber = 1;
	string orderStatus = 2;
}