syntax = "proto3";
//proto specifying service

option java_package = "ds.smartwarehouse.project.warehouseManagement"; //this option DOES change
option java_multiple_files = true; //DOES NOT change
option java_outer_classname = "NewWarehouseManagementImpl";

service WarehouseManagment {

	rpc productivityReport (ProductivityReportRequest) returns (ProductivityReportResponse){};

	rpc demandForecast (stream DemandForecastRequest) returns (DemandForecastResponse){};

	rpc realTimeOverview (stream RealTimeOverviewRequest) returns (stream RealTimeOverviewResponse) {};

}

message ProductivityReportRequest {
	string prodReport = 1;
	double Q1earning = 2;
	double Q2earning = 3;
	double Q3earning = 4;
	double Q4earning = 5;

	}

message ProductivityReportResponse {
	string prodReportService = 1;
	int32 AGVperformance = 2;
	int32 EmployeeCount =3;
	double Q1earning = 4;
	double Q2earning = 5;
	double Q3earning = 6;
	double Q4earning = 7;
	double QuartAvg = 8;
	double AnnualAvgEarning = 9;
	double totalEarning =10;
}

message DemandForecastRequest {
	string forecastMessage =1;
	int32 itemsSold = 2;
}

message DemandForecastResponse{
	string forecastReview = 1;
	int32 highDemand = 2;
}

message RealTimeOverviewRequest {
	string overviewMessage = 1;

}

message RealTimeOverviewResponse {
	string vehicleOverview = 1;
	string warehouseOverview = 2;
}